# task_pipeline

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
task_pipeline/: _utils.py  operators.py  pipe.py  types_.py
tests/: test_collect.py  test_pipe.py
tests/operators/: test_check.py  test_filter.py  test_match.py
